test/TestPhases/parser/invalid/importpath.blc
import <>a_director/my mod>

module

activity main()
end

